KL-127/refactor: use toList()